# laertes

./: README.md
laertes/: .gitignore  COPYRIGHT  Cargo.toml  README.md  curl-rust-run.sh  curl-rust.py  fns-affected-by-sets-of-ub.patch  fresh_replace.py  json-c-run.sh  json-c-rust.py  libxml2-run.sh  libxml2-rust.py  libxml2_part2.sh  optipng.patch  raw-ptr-stats.sh  run-all-experiments.sh  rust-toolchain  rustfmt.toml  test.rs  tinycc.patch  unsafe-behavior-stats.sh  unsafe_count.sh
laertes/after-resolve-imports/jsonc_rust/: lib.rs
laertes/after-resolve-imports/jsonc_rust/src/: arraylist.rs
laertes/after-resolve-imports/libxml2_rust/: lib.rs
laertes/after-resolve-imports/libxml2_rust/src/: HTMLparser.rs  HTMLtree.rs  SAX.rs  SAX2.rs  buf.rs  c14n.rs  catalog.rs  debugXML.rs  encoding.rs  error.rs  globals.rs  hash.rs  lib.rs  list.rs  nanohttp.rs  parser.rs  parserInternals.rs  pattern.rs  relaxng.rs  schematron.rs  testdso.rs  threads.rs  tree.rs  uri.rs  valid.rs  xmlIO.rs  xmlcatalog.rs  xmllint.rs  xmlmemory.rs  xmlmodule.rs  xmlreader.rs  xmlregexp.rs  xmlsave.rs  xmlschemas.rs  xmlschemastypes.rs  xmlstring.rs  (+3 more)
laertes/after-resolve-lifetimes/jsonc_rust/: Cargo.toml  lib.rs
laertes/after-resolve-lifetimes/libxml2_rust/: lib.rs
laertes/regression-tests/: field-test.rs  global_array.rs  mutable_ref_method.rs  nested_ptr_mut_shenanigans.rs  null-field.rs  ptr-test.rs  struct_in_fn_ptr.rs
laertes/resolve-imports-libxml2/libxml2_rust/: lib.rs
laertes/resolve-imports/curl-rust/: lib.rs
laertes/resolve-imports/libxml2_rust/: lib.rs  nanoftp_expand.rs
laertes/results/curl-rust/: Cargo.toml  lib.rs
laertes/results/jsonc_rust/: lib.rs
laertes/results/libxml2_rust/: Cargo.toml  lib.rs
laertes/rewrite-invocations/: curl-rust  jsonc_rust  libxml2_rust
laertes/src/: analysis.rs  cli.rs  compiler_interface.rs  config.rs  constants.rs  io.rs  lib.rs  ptr_arithmetic.rs  ptr_provenance.rs  refslice.rs  solver.rs  types.rs  util.rs
laertes/src/analysis/: commons.rs  span.rs  struct_info_pass.rs
laertes/src/compiler_interface/: error_handling.rs
laertes/src/solver/: equality_based.rs  set_based.rs
laertes/test-inputs/curl-rust/: lib.rs
laertes/test-inputs/jsonc_rust/: temp-1945915.rs
laertes/test-inputs/libxml2_rust/: lib.rs
unsafe-ana/: Cargo.toml
unsafe-ana/src/: main.rs
unsafe-fixer/: Cargo.toml
unsafe-fixer/src/: main.rs
(+885 files in other folders)
