[package]
name = "laertes"
version = "0.1.0"
authors = ["Mehmet Emre <maemre2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# default features
default = ["profiling"]
# profile certain operations
profiling = []
# use standard library hash instead of ahash
std_hash = []
# use equality-based reasoning instead of subset-based reasoning in the set-based solver
add_back_edges = []
# iteratively compact SCCs during set constraint solving, this may speed up large programs with lots of cycles in the constraint graph
iterative_scc_compaction = []
# debug the set solver by printing stats about intermediate stages
debug_set_solver = []

# Enable debug symbols on release builds
[profile.release]
debug = 2
incremental = true  # enable incremental compilation but keep the codegen-units as the default value to still get a fast program in the end

[dependencies]
rustc_tools_util = "0.2.0"
colored = "2.0.0"
rustfix = "0.6.0"
itertools = "0.9.0"
log = "0.4"
string_cache = "0.8"
lazy_static = "1.4"
env_logger = "0.8"
ahash = "0.7.2"
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.6"
regex = "1.5"
