[package]
name = "unsafe-ana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.3"
syn = {version="2.0", features=["full", "visit", "extra-traits"]}
rand = "0.8.5"
clap = { version = "4.3", features = ["derive"] }