[package]
name = "unsafe-fixer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.163"
serde_json = "1.0"
walkdir = "2.3.3"
syn = {version="2.0", features=["full", "visit-mut", "extra-traits"]}