[workspace]
members = [
]
[package]
name = "libxml2_rust"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2018"
autobins = false

[lib]
name = "libxml2_rust"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]
[dependencies]
c2rust-bitfields= "0.3"
c2rust-asm-casts= "0.2"
libc= "0.2"
